Refactor Advertisement: lazy loading, DTOs & async caching
Moving JPA relationships to FetchType.LAZY to optimize entity loading

Using DTOs instead of JPA entities in services

Advertisement now stores a list of image IDs, not Image entities themselves

Asynchronous sending of data to CacheService via @Async

Exception handling added to controllers (with messages and statuses)